@@ -1,3 +1,7 @@
+2002-09-12  OHASHI Akira  <bg66@koka-in.org>
+
+	* elserv.el (Example): Fix typo.
+
 2002-03-28  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* elserv.el (elserv-request-handler): Fix.
